# CKrezzScript

./: CMakeLists.txt  README.md
Test/: Core - Copy.c  Core.c  Core.h  main.krz
Test/AST/: AST_BASE.c  AST_BASE.h  AST_INT.c  Core.c  Makefile  main.krz
include/: MyDefine.h
src/: Core.c  Core.h  MyClass.c  MyClass.h  main.c
src/cpp_ver/: main.cpp
src/cpp_ver/Rule/: VariableRule.h
